# bizray

./: .env.example  .gitignore  README.docker.md  README.md  SEARCH_ANALYSIS.md  SEARCH_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  grafana-dashboard.json  package-lock.json  pre-parse.py  requirements.txt  shell.nix
.github/ISSUE_TEMPLATE/: backlot-item-template.md
.github/scripts/: check_emojis.py
.github/workflows/: cd-b.yaml  cd-f.yaml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  admin_api.py  api.py  main.py  parser.py  requirements.txt  test_metrics.py
backend/migrations/: 001_add_fulltext_search.sql  README.md  test_fulltext_search.py
backend/parser/: Dockerfile  parser.ipynb  parser.py
backend/src/: auth.py  cache.py  controller.py  db.py  demo.py  (+3 more)
deployment/: .env.example  README.md  compose.gcp.yml  compose.yml
docs/: PERFORMANCE_IMPROVEMENTS.md  USER_ROLES.md  apidocs.md  grafana.md  indicators.md  metrics.md  projectprinciples.md
frontend/: .dockerignore  Dockerfile  index.html  manage.py  package-lock.json  package.json  vite.config.js
frontend-tui/: .gitignore  Cargo.toml  README.md  config-example.toml
frontend-tui/src/: app.rs  error.rs  lib.rs  main.rs  navigation.rs
frontend-tui/src/api/: auth.rs  client.rs  company.rs  mod.rs  models.rs
frontend-tui/src/config/: settings.rs
frontend-tui/src/ui/: theme.rs
frontend-tui/src/ui/components/: input.rs  list.rs  mod.rs  risk_gauge.rs  statusbar.rs
frontend-tui/src/ui/screens/: account.rs  details.rs  help.rs  login.rs  mod.rs  register.rs  results.rs  search.rs
(+103 files in other folders)
