[package]
name = "bizray-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"

# Async runtime and HTTP client
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Config management
config = "0.14"
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal styling
unicode-width = "0.1"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.2"
